--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,118 +4,64 @@
 @{
     ViewData["Title"] = "Registrarse";
 }
+<link rel="stylesheet" href="~/css/register.css" />
 
-<div class="container">
-<div class="row">
-    <div class="col-md-12">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-register">
-            <center>
-                <h3 class="e0">Registrarse</h3>
-            </center>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="f1">
-                <br>
-            <div class="container">
-            <div class="row">
-                <div class=" col-md-12">
-                    <div class="text-center">
-                            <img src="https://www.vippng.com/png/full/355-3552587_change-icon-and-system-text-size-on-windows.png" width="200" height="200" alt="">
+    <main>
+        <div class="box">
+            <div class="inner-box">
+                <div class="forms-wrap">             
+                    <form asp-route-returnUrl="@Model.ReturnUrl" method="post" autocomplete="off" class="sign-in-form">
+                        <div class="logo">
+                            <img src="~/img/logo2.png" alt="" />
+                            <h3>El Huerto del Valle</h3>
                         </div>
-                    <div class="form-group">
-                        <label asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control" />
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+
+                        <div asp-validation-summary="All" class="text-danger"></div>
+
+                        <div class="heading">
+                            <h2>Regístrese</h2>
+                            <h6>¿Ya tiene una cuenta? </h6>
+                            <a asp-page="./Login" class="toggle">Sign in</a>
+                        </div>
+
+                        <div class="actual-form">
+
+                            <div class="input-wrap">
+                                <input asp-for="Input.Email" type="text" minlength="4" class="input-field" autocomplete="off" required/>
+                                <label class="label__register">Email</label>
+                            </div>
+
+                            <div class="input-wrap">
+                                <input asp-for="Input.Password" type="password" minlength="4" class="input-field" autocomplete="off" required/>
+                                <label class="label__register">Contraseña</label>
+                            </div>
+
+                            <div class="input-wrap">
+                                <input asp-for="Input.ConfirmPassword" type="password" minlength="4" class="input-field" autocomplete="off"  required/>
+                                <label class="label__register">Confirmar Contraseña</label>
+                            </div>
+
+                        </div>
+
+                        <button type="submit" class="sign-btn" >Registrarse </button>
+
+                        <p class="text">
+                            Al registrarme, acepto las condiciones de servicio y la política de privacidad.
+                        </p>
+                    </form>
+
+                </div>
+
+                <div class="carousel">
+                    <div class="images-wrapper">
+                        <img src="~/img/nosotros1.jpg" class="image" alt="" />
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" class="form-control" />
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Input.ConfirmPassword"></label>
-                        <input asp-for="Input.ConfirmPassword" class="form-control" />
-                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    </div>
-                    <center>
-                        <button type="submit" class="btn">
-                            Registrarse 
-                        </button>
-                    </center>
                 </div>
             </div>
-            </div>
-                <br>
-            </div>
+        </div>
+    </main>
 
-
-        </form>
-    </div>
-</div>
-</div>
-<style>
-
-    body {
-        background: #f7f7f7;
-        margin: 0;
-    }
-    .container{
-        width: 90%;
-        max-width: 1600px;
-        margin: auto;
-        position: relative;
-        overflow: hidden;
-    }
-    
-    .form-register {
-    width: 400px;
-
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 4px;
-
-    background-color: #FFFFFF;
-    }
-    .btn{
-        background-color: #2471A3;
-        color: white;
-    }
-
-    .e0{
-        font-family: 'Righteous', cursive;
-        font-weight: bold;
-        color: #3D272A;
-    }
-   
-    
-    .btn{
-        background-color: #2471A3;
-        color: #FFFFFF;
-        border-radius: 4px #FFFFFF;
-       font-family: 'Cooper Black';
-        
-    } 
-    .f1{
-        background-color: #FBF1F1;
-        font-family: 'Bauhaus 93';
-        width: 100%;
-    }
-
-    @@media (max-width: 800px){
-        .form-register {
-        width: 100%;
-
-        padding: 20px;
-        margin: auto;
-        margin-top: 100px;
-        border-radius: 4px;
-
-        background-color: #FFFFFF;
-        }
-    }
-    
-</style>
+<script src="~/js/form.js"></script>   
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
