--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -3,21 +3,33 @@
 @{
     ViewData["Title"] = "Register confirmation";
 }
+<div class="container">
+    <h1>@ViewData["Title"]</h1>
 
-<h1>@ViewData["Title"]</h1>
-@{
-    if (@Model.DisplayConfirmAccountLink)
-    {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
+    @{
+        if (@Model.DisplayConfirmAccountLink)
+        {
+    <p>
+        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
+        Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+    </p>
+        }
+        else
+        {
+    <p>
+            Por favor, compruebe su correo electrónico para confirmar su cuenta.
+    </p>
+        }
     }
-    else
-    {
-<p>
-        Por favor, compruebe su correo electrónico para confirmar su cuenta.
-</p>
+</div>
+
+<style>
+    .container{
+        width: 80%;
+        max-width: 1250px;
+        margin: auto;
+        position: relative;
+        overflow: hidden; 
     }
-}
+</style>
 
