--- a/Views/Producto/AgregarProducto.cshtml
+++ b/Views/Producto/AgregarProducto.cshtml
@@ -3,63 +3,57 @@
     ViewData["Title"] = "Admi-Producto";
 }
 
+<link rel="stylesheet" href="~/css/producto.css" />
 
-<div class="container">
-    <h3>Registrar Producto</h3>
-    <hr/>
-        
-        <form asp-action="AgregarProducto" method="POST">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="NombreProducto" ></label>
-                <input asp-for="NombreProducto" class="form-control"/>
-                <span asp-validation-for="NombreProducto" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group">
-                <label asp-for="PrecioProducto" ></label>
-                <input asp-for="PrecioProducto" class="form-control"/>
-                <span asp-validation-for="PrecioProducto" class="text-danger"></span>
-            </div>
+<div class="container__product">
+    <div class="card">
+        <div class="card-body">
+            <h3 class="form-title">Registrar Producto</h3>
 
-            <div class="form-group">
-                <label asp-for="Stock" ></label>
-                <input asp-for="Stock" class="form-control" min="1"/>
-                <span asp-validation-for="Stock" class="text-danger"></span>
-            </div>
+            <form asp-action="AgregarProducto" method="POST" class="form-list">
 
-            <div class="form-group">
-                <label asp-for="ImagenProducto" ></label>
-                <input asp-for="ImagenProducto" class="form-control"/>
-                <span asp-validation-for="ImagenProducto" class="text-danger"></span>
-            </div>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="form-group">
-                <label asp-for="Categoria"></label>
-                <select asp-for="CategoriaId" asp-items=" ViewBag.categoria" class="form-control"></select>
-            </div>
+                <div class="form-list__row">
+                    <label asp-for="NombreProducto" ></label>
+                    <input asp-for="NombreProducto"/>
+                    <span asp-validation-for="NombreProducto" class="text-danger"></span>
+                </div>
+                
+                <div class="form-list__row">
+                    <label asp-for="PrecioProducto" ></label>
+                    <input asp-for="PrecioProducto"/>
+                    <span asp-validation-for="PrecioProducto" class="text-danger"></span>
+                </div>
 
-            <div class="form-group">
-                <label asp-for="DescripcionProducto" ></label>
-                <textarea asp-for="DescripcionProducto"></textarea>
-                <span asp-validation-for="DescripcionProducto" class="text-danger"></span>
-            </div>
+                <div class="form-list__row">
+                    <label asp-for="Stock" ></label>
+                    <input asp-for="Stock" min="1"/>
+                    <span asp-validation-for="Stock" class="text-danger"></span>
+                </div>
 
-            <div class="form-group">
-                <button class="btn btn-primary">Registrar Producto</button>
-            </div>
-        </form>
+                <div class="form-list__row">
+                    <label asp-for="ImagenProducto" ></label>
+                    <input asp-for="ImagenProducto"/>
+                    <span asp-validation-for="ImagenProducto" class="text-danger"></span>
+                </div>
+
+                <div class="form-list__row">
+                    <label asp-for="Categoria"></label>
+                    <select asp-for="CategoriaId" asp-items=" ViewBag.categoria"></select>
+                </div>
+
+                <div class="form-list__row">
+                    <label asp-for="DescripcionProducto" ></label>
+                    <textarea asp-for="DescripcionProducto"></textarea>
+                    <span asp-validation-for="DescripcionProducto" class="text-danger"></span>
+                </div>
+
+                <div class="form-list__row">
+                    <button class="btn__add_product">Registrar Producto</button>
+                    <a asp-action="AdministrarProducto"  class="btn__volver" >Volver</a>
+                </div>
+            </form>
+        </div>     
+    </div>
 </div>
-
-<style>
-    textarea {
-        width: 100%;
-        height: 150px;
-        padding: 12px 20px;
-        box-sizing: border-box;
-        border: 2px solid #ccc;
-        border-radius: 4px;
-        background-color: #f8f8f8;
-        resize: none;
-    }
-</style>
