estilos al layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -245,14 +245,13 @@
             </div>
         </nav>
     </header>
-    <br>
-    <div class="contenido">
-        <main role="main">
+
+    <div class="">
+
             @RenderBody()
-        </main>
+
     </div>
 
-    <br>
     <footer class="main-footer">
         <div class="container con__footer">
             <div class="footer__section">
