--- a/wwwroot/css/menuAdmi.css
+++ b/wwwroot/css/menuAdmi.css
@@ -44,7 +44,7 @@ section{
 }
 
 main{
-    padding: 20px;
+    padding: 15px;
 }
 
 header{
@@ -158,6 +158,7 @@ a.selected{
 a.selected:hover{
     color: rgb(167, 160, 160);
     text-decoration: none;
+    cursor: pointer;
 }
 
 /*
@@ -183,6 +184,10 @@ a.selected:hover{
 
 
 @media screen and (max-width: 760px){
+    main{
+        padding: 5px;
+    }
+
     .body_move{
         margin-left: 0px;
     }
