Script radio button

--- a/Views/Proforma/Proforma.cshtml
+++ b/Views/Proforma/Proforma.cshtml
@@ -84,15 +84,8 @@
                 </div>
             </div>
             <div>
-                <div class="envio">
-                    <div class="title__shipping"> <strong> Método de envío </strong> </div>
-                    <div class="method__shipping">
-                        <div class="method__shipping__delivery">
-                            <span>Delivery Lima Metropolinata</span>
-                            <br/>
-                            <span>Recoger en tienda</span>
-                        </div>
-                    </div>
+               <div class="envio">
+                    <div class="title__shipping"> <strong> Pago en una cuota </strong> </div>
                 </div>
             </div>
             <div>
@@ -100,6 +93,9 @@
                     <div class=""> <strong> Total </strong> </div>
                     <div class="">S/ @total</div>
                 </div>
+            </div>
+            <div style="text-align: center;">
+                <button asp-action ="Procesar" class="btn btn-danger">Procesar Pedido</button>
             </div>
         </div>
     </div>
