Metodo de envio

--- a/Views/Proforma/Proforma.cshtml
+++ b/Views/Proforma/Proforma.cshtml
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div style="text-align: center;">
-                <button asp-action ="Procesar" class="btn btn-danger">Procesar Pedido</button>
+                <a asp-action ="Procesar" class="btn btn-danger">Procesar Pedido</a>
             </div>
         </div>
     </div>
