--- a/Views/Proforma/Proforma.cshtml
+++ b/Views/Proforma/Proforma.cshtml
@@ -1,12 +1,17 @@
-@model IEnumerable<HuertoDelValle.Models.Proforma>
+@model dynamic;
+@using System.Collections.Generic;
 
 @{
     ViewData["Title"] = "Carrito";
+    IEnumerable<HuertoDelValle.Models.Proforma> listProformas = new List<Proforma>();
+    listProformas = @Model.proformas;
+    Decimal montoTotal = @Model.montoTotal;  
+        
 }
 
 <link rel="stylesheet" href="~/css/proforma.css" />
 
-@if (Model.Count() == 0){
+@if (listProformas.Count() == 0){
     <div class="container text-center">
         <div class="carrito__vacio">
             <img src="~/img/cartvacio.png" alt="" class="cart__img">
@@ -35,7 +40,7 @@
                     </tr>
                 </thead>
                 <tbody class="table__tbody">
-                @foreach (var item in Model) {
+                @foreach (Proforma item in Model.proformas) {
                     <tr>
                         <td>
                             <a asp-action="QuitarProducto" asp-route-id="@item.Id" style="color: #D52F0B;" ><i class="fa fa-remove"></i></a>
@@ -63,24 +68,13 @@
                 </tbody>
             </table>
         </div>
-        @{
-        decimal total = 0;
-        var contar = 1;
-        }
-        @foreach (var item in Model){
-            <tr>
-                @{
-                    total = total + item.SubTotal;
-                    contar++;
-                }
-            </tr>
-        }
+        
         <div class="total col-md-4">
             <h3 class="total__title">Total del Carrito</h3>
             <div>
                 <div class="subtotal">
                     <div class=""> <strong> SubTotal </strong> </div>
-                    <div class="">S/ @total</div>
+                    <div class="">S/ @montoTotal</div>
                 </div>
             </div>
             <div>
@@ -98,12 +92,12 @@
             <div>
                 <div class="total__shipping">
                     <div class=""> <strong> Total </strong> </div>
-                    <div class="">S/ @total</div>
+                    <div class="">S/ @montoTotal</div>
                 </div>
             </div>
             <div>
                 <div class="compra__btn">
-                    <a href="" class="btn__finalizar__compra">Finalizar compra</a>
+                    <a asp-controller="Orden" asp-action="Procesar" class="btn__finalizar__compra">Metodo de envio</a>
                 </div>
             </div>
         </div>
