--- a/Views/Producto/AdministrarProducto.cshtml
+++ b/Views/Producto/AdministrarProducto.cshtml
@@ -7,8 +7,9 @@
 
 <div class="container">
     <br>
-    <div>
+    <div class="btn__section">
         <a asp-action="AgregarProducto" class="btn__add_product">Registrar Producto</a>
+        <a asp-controller="CrearPDF" asp-action="Index" class="btn__pdf">Generar Reporte</a>
     </div>
     <br>
     <table class="table__product">
